<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.logger.practicletask.auth.register.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignUpText"
                style="@style/primaryTextView24Px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputFullName"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignUpText"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFullName"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="textPersonName"
                    android:text="@={viewmodel.registerUiModel.fullName}"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    tools:text="Ahmed" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputFullName"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.registerUiModel.email.email}"
                    tools:text="ahmed@test.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobile"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="number"
                    android:text="@={viewmodel.registerUiModel.phoneNumber}"
                    tools:text="1234567890" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputCity"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputMobile"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCity"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:text="@={viewmodel.registerUiModel.city}"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    tools:text="Ahmedabad" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGender"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputCity"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGender"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="text"
                    android:text="@={viewmodel.registerUiModel.gender}"
                    android:focusable="false"
                    tools:text="Male" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputGender"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.registerUiModel.password.password}"
                    tools:text="Test@123" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.registerUiModel.confirmPassword.confirmPassword}"
                    tools:text="Test@123" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/primaryButton14Px"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/textInputFullName"
                app:layout_constraintStart_toStartOf="@+id/textInputFullName"
                app:layout_constraintTop_toBottomOf="@+id/textInputConfirmPassword" />

            <TextView
                android:id="@+id/tvAlreadyRegistered"
                style="@style/secondaryTextView14Px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/already_registered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvLogin"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/actionableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvAlreadyRegistered"
                app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>