<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.logger.practicletask.auth.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.auth.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSignInText"
                style="@style/primaryTextView24Px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSignInText"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_mobile"
                    android:imeOptions="flagNoExtractUi|actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={viewmodel.loginUIModel.emailOrMobile}"
                    tools:text="email@test.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:theme="@style/Widget.App.TextInputLayout"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
                app:layout_constraintStart_toStartOf="@+id/textInputEmail"
                app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
                app:setFontFamily="@{context}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/primaryEditText14Px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="flagNoExtractUi|actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.loginUIModel.password.password}"
                    tools:text="password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                style="@style/primaryButton14Px"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
                app:layout_constraintStart_toStartOf="@+id/textInputEmail"
                app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

            <TextView
                android:id="@+id/tvNewUser"
                style="@style/secondaryTextView14Px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/new_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvRegister"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <TextView
                android:id="@+id/tvRegister"
                style="@style/actionableTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvNewUser"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>